<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oz.myappportfolio.MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/front_page_title"
        android:id="@+id/title"
        android:gravity="center"
        style="@style/CodeFont"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popularMoviesButton"
        android:text="@string/popular_movies"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:onClick="sendMessage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stockHawkButton"
        android:text="@string/stock_hawk"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buildItButton"
        android:text="@string/build_it_bigger"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/materialAppButton"
        android:text="@string/make_your_app_material"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goUbiquitousButton"
        android:text="@string/go_ubiquitous"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/capstoneButton"
        android:text="@string/capstone"
        style="@style/ButtonStyle"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</LinearLayout>
